cmake_minimum_required(VERSION 3.14)
project(client)
#add_subdirectory(src)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-lncurses -lmenu -lpanel -lprotobuf")
#target_link_libraries(client src)
#target_link_libraries(src INTERFACE ${Protobuf_LIBRARIES})
#target_link_libraries(${client} ncurses menu panel)
add_executable(client main.cpp clt.cpp protomsg.pb.cc UI_Control.cpp clt.h protomsg.pb.h SharedQueue.h UI_Control.h)